--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <h1>Flight Game</h1>
+
+    <!-- Pelaajan tila -->
     <div id="player-status"></div>
     <button onclick="fetchPlayerStatus()">Get Player Status</button>
+
+    <!-- Lentokentän tiedot -->
+    <div id="random-airport"></div>
+    <button onclick="fetchRandomAirport()">Show Random Airport</button>
+
+    <!-- Kauppa -->
     <div id="shop"></div>
-    <button onclick="fetchShop()">Open Shop</button>
+    <button onclick="fetchShop()">Open Shop taa ei viel tee mitaan</button>
+
     <script src="app.js"></script>
 </body>
 </html>
