--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <h1>Flight Game</h1>
-
-    <!-- Pelaajan tila -->
-    <div id="player-status"></div>
-    <button onclick="fetchPlayerStatus()">Get Player Status</button>
-
-    <!-- Lentokentän tiedot -->
-    <div id="random-airport"></div>
-    <button onclick="fetchRandomAirport()">Show Random Airport</button>
-
-    <!-- Kauppa -->
-    <div id="shop"></div>
-    <button onclick="fetchShop()">Open Shop taa ei viel tee mitaan</button>
-
+    <div id="main-menu">
+        <button onclick="startGame()">Start Game</button>
+        <button onclick="openSettings()">Settings</button>
+        <button onclick="quitGame()">Quit</button>
+    </div>
+    <div id="game-screen" style="display:none;">
+        <div id="player-status"></div>
+        <button onclick="fetchPlayerStatus()">Get Player Status</button>
+        <div id="random-airport"></div>
+        <button onclick="fetchRandomAirport()">Show Random Airport</button>
+        <div id="shop"></div>
+        <button onclick="fetchShop()">Open Shop</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
