main menu into peli

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,12 +14,7 @@
         <button onclick="quitGame()">Quit</button>
     </div>
     <div id="game-screen" style="display:none;">
-        <div id="player-status"></div>
-        <button onclick="fetchPlayerStatus()">Get Player Status</button>
-        <div id="random-airport"></div>
-        <button onclick="fetchRandomAirport()">Show Random Airport</button>
-        <div id="shop"></div>
-        <button onclick="fetchShop()">Open Shop</button>
+        <h1>tänne sit ite peli !</h1>
     </div>
     <script src="app.js"></script>
 </body>
