--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,14 +8,21 @@
 </head>
 <body>
     <h1>Flight Game</h1>
-    <div id="main-menu">
-        <button onclick="startGame()">Start Game</button>
-        <button onclick="openSettings()">Settings</button>
-        <button onclick="quitGame()">Quit</button>
-    </div>
-    <div id="game-screen" style="display:none;">
-        <h1>tänne sit ite peli !</h1>
-    </div>
+
+    <!-- Pelaajan tila -->
+    <div id="player-status"></div>
+    <button onclick="fetchPlayerStatus()">Get Player Status</button>
+
+    <!-- Lentokentän tiedot -->
+    <div id="random-airport"></div>
+    <button onclick="fetchRandomAirport()">Show Random Airport</button>
+
+    <!-- Kauppa -->
+    <div id="shop"></div>
+    <button onclick="fetchShop()">Open Shop taa ei viel tee mitaan</button><br>
+    
+    <button onclick="openMap()">AVAA KARTAN TOIVOTTAVASTI</button>
+
     <script src="app.js"></script>
 </body>
 </html>
