--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flight Game</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Flight Game</h1>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+    </head>
+    <body>
+        <h1>OPERAATIO VIIMEINEN VALSSI</h1>
 
-    <!-- Pelaajan tila -->
-    <div id="player-status"></div>
-    <button onclick="fetchPlayerStatus()">Get Player Status</button>
+        <button id="start">Aloita peli</button>
 
-    <!-- Lentokentän tiedot -->
-    <div id="random-airport"></div>
-    <button onclick="fetchRandomAirport()">Show Random Airport</button>
+        <div id="story"></div>
 
-    <!-- Kauppa -->
-    <div id="shop"></div>
-    <button onclick="fetchShop()">Open Shop taa ei viel tee mitaan</button><br>
-    
-    <button onclick="openMap()">AVAA KARTAN TOIVOTTAVASTI</button>
-
-    <script src="app.js"></script>
-</body>
+        <script src="app.js"></script>
+    </body>
 </html>
