--- a/frontend/map/map.html
+++ b/frontend/map/map.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Operaatio://Viimeinen Valssi</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="map/map.css">
 </head>
@@ -18,12 +18,22 @@
         <button class="btn-home" onclick="goHome()">Go to Home Page</button>
     </nav>
 
-    <div id="stats-box">
-        <h2>Player Stats</h2>
-        <div id="player-stats">
-            Loading player stats...
-        </div>
+<div id="stats-box">
+    <h2>Player Stats</h2>
+    <div id="player-stats">
+        <div class="stat location"><b>Location:</b> EFTP</div>
+        <div class="stat fuel"><b>Fuel:</b> 250 km</div>
+        <div class="stat war-points"><b>War Points:</b> 0</div>
     </div>
+    <hr>
+    <h2>Control Stats</h2>
+    <div id="control-stats">
+        <div class="stat finland-airports"><b>Finland Airports:</b> 1</div>
+        <div class="stat russia-airports"><b>Russia Airports:</b> 17</div>
+        <div class="stat liberation"><b>Liberation:</b> 5.56%</div>
+    </div>
+</div>
+
 
     <div id="map"></div>
 
