suomennettu juttuja, difficulty näkyy markeris

--- a/frontend/map/map.html
+++ b/frontend/map/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,28 +12,27 @@
 <body>
     <nav>
         <div>
-            <a href="/">Home</a>
-            <a href="/map">Map</a>
+            <a href="/">Etusivu</a>
+            <a href="/map">Kartta</a>
         </div>
-        <button class="btn-home" onclick="goHome()">Go to Home Page</button>
+        <button class="btn-home" onclick="goHome()">Siirry etusivulle</button>
     </nav>
 
 <div id="stats-box">
-    <h2>Player Stats</h2>
+    <h2>Pelaajan Tilastot</h2>
     <div id="player-stats">
-        <div class="stat location"><b>Location:</b> EFTP</div>
-        <div class="stat fuel"><b>Fuel:</b> 250 km</div>
-        <div class="stat war-points"><b>War Points:</b> 0</div>
+        <div class="stat location"><b>Sijainti:</b> EFTP</div>
+        <div class="stat fuel"><b>Polttoaine:</b> 250 km</div>
+        <div class="stat war-points"><b>Sotapisteet:</b> 0</div>
     </div>
     <hr>
-    <h2>Control Stats</h2>
+    <h2>Hallinnan Tilastot</h2>
     <div id="control-stats">
-        <div class="stat finland-airports"><b>Finland Airports:</b> 1</div>
-        <div class="stat russia-airports"><b>Russia Airports:</b> 17</div>
-        <div class="stat liberation"><b>Liberation:</b> 5.56%</div>
+        <div class="stat finland-airports"><b>Suomen Lentokentät:</b> 1</div>
+        <div class="stat russia-airports"><b>Venäjän Lentokentät:</b> 17</div>
+        <div class="stat liberation"><b>Vapautus:</b> 5.56%</div>
     </div>
 </div>
-
 
     <div id="map"></div>
 
