Your commit message describing the changes

--- a/frontend/start-page/startpage.html
+++ b/frontend/start-page/startpage.html
@@ -13,6 +13,8 @@
 
         <button id="start">Aloita peli</button>
 
+        <button id="start-video">Aloita peli cool video</button>
+
         <div id="story"></div>
 
         <script src="app.js"></script>
