--- a/frontend/start-page/startpage.html
+++ b/frontend/start-page/startpage.html
@@ -12,6 +12,8 @@
         <h1>OPERAATIO VIIMEINEN VALSSI</h1>
 
         <button id="start">Aloita peli</button>
+        <button id="settings">Asetukset</button>
+        <button id="exit">Poistu</button>
 
         <div id="story"></div>
 
