--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Game</title>
     <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Flight Game</h1>
-    <!-- Pelaajan tila -->
-    <div id="player-status"></div>
+    <h1>OPERAATIO VIIMEINEN VALSSI</h1>
+
+    <button id="start" onclick="openMap()">Aloita peli</button>
+    <button id="settings">Asetukset</button>
+    <button id="exit">Poistu</button>
+
+    <!-- <div id="player-status"></div>
     <button onclick="fetchPlayerStatus()">Get Player Status</button>
-    <!-- Lentokentän tiedot -->
     <div id="random-airport"></div>
     <button onclick="fetchRandomAirport()">Show Random Airport</button>
-    <!-- Kauppa -->
     <div id="shop"></div>
     <button onclick="fetchShop()">Open Shop taa ei viel tee mitaan</button><br>
     
-    <button onclick="openMap()">AVAA KARTAN TOIVOTTAVASTI</button>
+    <button onclick="openMap()">AVAA KARTAN TOIVOTTAVASTI</button> -->
+
     <script src="app.js"></script>
 </body>
 </html>
