--- a/frontend/map/map.html
+++ b/frontend/map/map.html
@@ -10,26 +10,36 @@
     <link rel="stylesheet" href="map/map.css">
 </head>
 <body>
-    <nav>
-        <button class="btn-home" onclick="goHome()">Siirry etusivulle</button>
-    </nav>
+    <div class="military-stats-container">
+        <div class="stats-panel player-stats">
+            <h2>🎖️ OPERATIIVISET TIEDOT 🎖️</h2>
+            <div class="stat-line">
+                <span class="stat-icon">📍</span> Sijainti: <span class="value">EFTP</span>
+            </div>
+            <div class="stat-line">
+                <span class="stat-icon">⛽</span> Polttoaine: <span class="value">500 km</span>
+            </div>
+            <div class="stat-line">
+                <span class="stat-icon">⭐</span>   Sotapisteet: <span class="value">0</span>
+            </div>
+        </div>
 
-<div id="stats-box">
-    <h2>Pelaajan Tilastot</h2>
-    <div id="player-stats">
-        <div class="stat location"><b>Sijainti:</b> EFTP</div>
-        <div class="stat fuel"><b>Polttoaine:</b> 250 km</div>
-        <div class="stat war-points"><b>Sotapisteet:</b> 0</div>
+        <div class="stats-panel control-stats">
+            <h2>🎯 TAISTELUTILANNE 🎯</h2>
+            <div class="stat-line">
+                <span class="stat-icon">🇫🇮</span> Suomen Lentokentät: <span class="value">1</span>
+            </div>
+            <div class="stat-line">
+                <span class="stat-icon">⚔️</span> Venäjän Lentokentät: <span class="value">17</span>
+            </div>
+            <div class="progress-container">
+                <div class="progress-label">Vapautus: 5.56%</div>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 5.56%"></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <hr>
-    <h2>Hallinnan Tilastot</h2>
-    <div id="control-stats">
-        <div class="stat finland-airports"><b>Suomen Lentokentät:</b> 1</div>
-        <div class="stat russia-airports"><b>Venäjän Lentokentät:</b> 17</div>
-        <div class="stat liberation"><b>Vapautus:</b> 5.56%</div>
-    </div>
-</div>
-
     <div id="map"></div>
 
     <script src="map/map.js"></script>
