polttoaine kauppa toimii. inventory ei toimi (yllätys)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
     <h1>Operaatio://Viimeinen Valssi</h1>
 
     <button id="start" onclick="openMap()">Aloita peli</button>
-    <button id="settings">Asetukset</button>
-    <button id="exit">Poistu</button>
+    <button id="settings" onclick="openSettings()">Asetukset</button>
+    <button id="exit" onclick="quitGame()">Poistu</button>
 
     <!-- <div id="player-status"></div>
     <button onclick="fetchPlayerStatus()">Get Player Status</button>
