--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Operaatio://Viimeinen Valssi</h1>
+    <h1>OPERAATIO://VIIMEINEN VALSSI</h1>
 
     <button id="start" onclick="openMap()">Aloita peli</button>
     <button id="settings" onclick="openSettings()">Asetukset</button>
