MAJOR UPDATE (100% TL MADE BY ME)

--- a/frontend/goodbye.html
+++ b/frontend/goodbye.html
@@ -12,7 +12,7 @@
             window.close();
 
             if (!window.closed) {
-                document.body.innerHTML = "<h1>Please close the tab manually. Thank you!</h1>";
+                document.body.innerHTML = "<h1>Voisitko sammuttaa sivun manuaalisesti. Kiitos!</h1>";
             }
         }, 50);
     </script>
