oopps bug fifcsx

--- a/frontend/map/map.html
+++ b/frontend/map/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operaatio://Viimeinen Valssi</title>
+    <title>OPERAATIO://VIIMEINEN VALSSI</title>
     <!-- Kartan tyylitiedosto -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
     <!-- Karttakirjasto -->
@@ -63,7 +63,7 @@
                 <button onclick="buyFuel(50)">Osta 50km polttoainetta (25 sotapistettä)</button>
                 <button onclick="buyFuel(100)">Osta 100km polttoainetta (50 sotapistettä)</button>
             </div>
-            <h3>Päivitykset</h3>
+            <h3>Päivitykset <span style="color: red;">(EN TOIMI)😭</span></h3>
             <div class="store-items" id="store-items"></div>
         </div>
     </div>
